--- a/app/static/homepage.html
+++ b/app/static/homepage.html
@@ -5,9 +5,9 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="xsnew/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="csnew/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 
