Adding artifacts category page; updated all nav links

--- a/app/static/artifact-category.html
+++ b/app/static/artifact-category.html
@@ -40,7 +40,7 @@
 				        	</a>
 				        </li>
 				        <li class="active">
-				        	<a href="artifact-category.html">
+				        	<a href="artifacts.html">
 				        		<span class="circle-number">2</span> Choose Artifacts
 				        	</a>
 				        </li>
@@ -69,7 +69,7 @@
 
 	    <div class="container">
 	    	<ol class="breadcrumb">
-			  <li><a href="#">&lt; return to all artifacts</a></li>
+			  <li><a href="artifacts.html">&lt; return to all artifacts</a></li>
 			</ol>
 		</div>
 
